sandbox/output
Patient.java:24: error: <identifier> expected
    private boolean isOverlapped(medicine, clashingMedicine) {
                                         ^
Patient.java:24: error: <identifier> expected
    private boolean isOverlapped(medicine, clashingMedicine) {
                                                           ^
2 errors
